added /health route and dto with updated swagger file
