# Backend/internal/api/router.go
@@ -4,31 +4,34 @@ import (
 	"net/http"
 	"github.com/Sidarth-Roy/NorthStar-Intelligence/Backend/internal/app"
 	"github.com/Sidarth-Roy/NorthStar-Intelligence/Backend/internal/middleware"
+	"github.com/Sidarth-Roy/NorthStar-Intelligence/Backend/pkg/config"
+	"github.com/Sidarth-Roy/NorthStar-Intelligence/Backend/pkg/db"
+	"github.com/Sidarth-Roy/NorthStar-Intelligence/Backend/internal/dto"
 	"github.com/gin-gonic/gin"
 )
 
 // Swagger UI HTML template loading via CDN
 const swaggerHTML = `<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>NorthStar API Docs</title>
-  <link rel="stylesheet" href="https://unpkg.com/swagger-ui-dist@5.11.0/swagger-ui.css" />
-</head>
-<body>
-  <div id="swagger-ui"></div>
-  <script src="https://unpkg.com/swagger-ui-dist@5.11.0/swagger-ui-bundle.js" crossorigin></script>
-  <script>
-    window.onload = () => {
-      window.ui = SwaggerUIBundle({
-        url: '/docs/openapi.yaml', // Points to your static YAML file
-        dom_id: '#swagger-ui',
-      });
-    };
-  </script>
-</body>
-</html>`
+	<html lang="en">
+	<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>NorthStar API Docs</title>
+	<link rel="stylesheet" href="https://unpkg.com/swagger-ui-dist@5.11.0/swagger-ui.css" />
+	</head>
+	<body>
+	<div id="swagger-ui"></div>
+	<script src="https://unpkg.com/swagger-ui-dist@5.11.0/swagger-ui-bundle.js" crossorigin></script>
+	<script>
+		window.onload = () => {
+		window.ui = SwaggerUIBundle({
+			url: '/docs/openapi.yaml', // Points to your static YAML file
+			dom_id: '#swagger-ui',
+		});
+		};
+	</script>
+	</body>
+	</html>`
 
 func SetupRouter(deps *app.AppContainer) *gin.Engine {
 	r := gin.New()
@@ -58,6 +61,29 @@ func SetupRouter(deps *app.AppContainer) *gin.Engine {
 
 	apiV1 := r.Group("/api/v1")
 	{
+
+		apiV1.GET("/health", func(c *gin.Context) {
+			cfg := config.LoadConfig()
+			database := db.GetDB(cfg.DatabaseURL)
+			sqlDB, err := database.DB() 
+			
+        	response := dto.HealthResponse{
+        	    Status: "ok",
+        	    Details: dto.HealthDetails{
+        	        DB: "ok",
+        	    },
+        	}
+
+        	if err != nil || sqlDB.Ping() != nil {
+        	    response.Status = "error"
+        	    response.Details.DB = "down"
+        	    c.JSON(http.StatusServiceUnavailable, response)
+        	    return
+        	}
+
+			c.JSON(http.StatusOK, response)
+		})
+
 		// Product Routes
 		productRoutes := apiV1.Group("/products")
 		{
