# Backend/internal/dto/health_dto.go
@@ -1,0 +1,10 @@
+package dto
+
+type HealthDetails struct {
+	DB string `json:"DB"`
+}
+
+type HealthResponse struct {
+	Status  string        `json:"status"`
+	Details HealthDetails `json:"details"`
+}
